# not-a-game

./: biome.json  bun.lockb  index.html  package.json  tailwind.config.js  vite.config.ts
src/: error-fuckery.css  main.tsx  recovery-fuckery.css  routeTree.gen.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/routes/: __root.tsx  close.lazy.tsx  error.lazy.tsx  properly.lazy.tsx  recovery.lazy.tsx  seriously.lazy.tsx  timer.lazy.tsx  trust.lazy.tsx  win.lazy.tsx
