[package]
authors     = ["you"]
description = "A Tauri App"
edition     = "2021"
name        = "not-a-game"
version     = "0.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib", "staticlib"]
name       = "not_a_game_lib"

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
tauri              = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
